# FIRE-VPN

./: README.md
.github/workflows/: api-go.yml  vpn-core.yml  vpn-desktop.yml  vpn-mobile.yml
ansible/: .gitignore  ansible.cfg  playbook.yml
ansible/inventories/: hosts.ini
ansible/roles/wireguard/defaults/: main.yml
ansible/roles/wireguard/handlers/: main.yml
ansible/roles/wireguard/tasks/: install.yml  keys.yml  main.yml
ansible/roles/wireguard/templates/: wg.conf.j2
docker/: docker-compose.yml
workspace/api-go/: .env  README.md  go.mod  go.sum  main.go
workspace/api-go/config/: config.go
workspace/api-go/db/: peers.go  servers.go  users.go
workspace/api-go/handlers/: auth.go  handlers.go  profile.go  servers.go  vpn.go
workspace/api-go/helpers/: user.go
workspace/api-go/middleware/: auth.go
workspace/api-go/models/: auth.go  peer.go  request.go  server.go  user.go
workspace/api-go/routes/: routes.go
workspace/api-go/services/: ssh.go  wireguard.go
workspace/api-go/utils/: response.go
workspace/vpn-core/: Cargo.toml  README.md
workspace/vpn-core/src/: api.rs  auth.rs  lib.rs  session.rs  wireguard.rs
workspace/vpn-core/src/api/: api.rs  client.rs  mod.rs
workspace/vpn-core/src/auth/: mod.rs  (+1 more)
workspace/vpn-desktop/: Cargo.toml
workspace/vpn-desktop/src/: app.rs  main.rs
workspace/vpn-desktop/src/ui/: connection.rs  continents.rs  flags.rs  login.rs  mod.rs  profile.rs  servers.rs  theme.rs
workspace/vpn-desktop/src/vpn/: mod.rs  tunnel.rs
workspace/vpn-mobile/: App.tsx  app.json  eas.json  package-lock.json  package.json
(+23 files in other folders)
