[package]
name = "vpn-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.29", default-features = true }
egui = "0.29"
egui_extras = "0.29"

vpn-core = { path = "../vpn-core" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"

dirs = "5.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
